--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
--f https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html
-torch_nightly
-fastai
-starlette
-uvicorn
-python-multipart
-aiofiles
-aiohttp
+aiofiles==0.4.0
+aiohttp==3.5.4
+asyncio==3.4.3
+fastai==1.0.59
+#https://download.pytorch.org/whl/cpu/torch-1.3.1-cp37-cp37m-linux_x86_64.whl
+torch==1.3.1
+torchvision==0.4.2
+numpy==1.17.4
+starlette==0.12.0
+uvicorn==0.7.1
+python-multipart==0.0.5
+pillow==5.4.1
